src/sass/components/_responsive.scss
@use "../variables";
@use "../vendor/font-awesome/variables" as fa-variables;
@use "../vendor/font-awesome/mixins" as fa-mixins;
@use "../vendor/bootstrap/mixins/text-truncate";
@use "../mixins/variants";

.hidden,
.mobile-show {
  display: none;
}

.inline-flex {
  display: inline-flex;

  body.controller-issues h2 & {
    padding-right: 0;
  }
}

// stylelint-disable selector-max-compound-selectors
body {
  @media screen and (max-width: variables.$redmine-responsive-max) {
    .flyout-menu + div {
      #header {
        height: variables.$responsive-header-height;
        background-color: variables.$header-bg;

        .jump-box-arrow {
          &::before {
            line-height: variables.$responsive-header-height;
          }
        }

        #quick-search {
          select {
            top: 0;
            height: variables.$responsive-header-height;
            box-shadow: none;
          }
        }
      }

      #main {
        padding-top: variables.$responsive-header-height;
      }
    }

    #header {
      #project-jump {
        padding: 0 variables.$responsive-header-height 0 0;

        &.expanded {
          .drdn-trigger {
            &::before {
              padding: 0;
              transform: rotate(180deg);
            }
          }
        }

        .drdn-trigger {
          // Using @extend across media queries is not possible.
          // https://github.com/sass/sass/issues/1050
          // Consider to create a mixin if reusing %fa-icon in other media queries is needed.
          
          @include text-truncate.text-truncate;

          display: block;
          height: variables.$responsive-header-height;
          padding: 0;
          background-color: transparent;
          box-shadow: none;
          font-size: variables.$font-size-large;
          font-weight: variables.$font-weight-normal;
          line-height: variables.$responsive-header-height;

          &::before {
            @include fa-mixins.fa-icon;
            @include variants.fa-custom-icon(fa-variables.$fa-var-chevron-down);

            position: relative;
            top: -.1em;
            width: variables.$responsive-header-height * .75;
            padding: 0;
            transform: none;
            font-size: .8em;
            text-align: center;
          }

          &::after {
            display: none;
          }
        }

        .drdn-content {
          top: variables.$responsive-header-height;
          font-size: variables.$font-size-base;
        }
      }
    }

    #content {
      overflow: auto;
    }

    #ajax-indicator {
      left: 50%;
      width: 200px;
    }

    .mobile-toggle-button {
      width: variables.$responsive-header-height;
      height: variables.$responsive-header-height;
      line-height: variables.$responsive-header-height;

      &:focus {
        text-decoration: none;
      }
    }

    .flyout-menu {
      background-color: variables.$flyout-menu-bg;
      color: variables.$flyout-menu-text;

      .search-magnifier {
        left: 18px;
      }

      &__search {
        height: variables.$responsive-header-height;
        padding: (variables.$padding-side * .5);
        line-height: normal;

        input[type="text"] {
          height: variables.$responsive-header-height - variables.$padding-side;
          line-height: variables.$responsive-header-height - variables.$padding-side;
        }
      }

      &__avatar {
        img.gravatar {
          top: 0;
        }
      }

      &__sidebar {
        p {
          padding-left: variables.$padding-large-horizontal;
        }
      }

      ul {
        li:nth-child(n) {
          a:not(.icon-only) {
            height: auto;
            padding: variables.$padding-large-vertical variables.$padding-large-horizontal;
            line-height: variables.$line-height-base;
          }
        }

        &.queries {
          li {
            display: flex;

            a {
              flex: 1 1 auto;
            }

            .icon-only {
              flex: 0;
              padding-right: 0;
              padding-left: 40px;
              text-align: center;
              text-overflow: initial;

              &::before {
                width: 40px;
                margin-left: -40px;
              }
            }
          }
        }
      }

      a {
        &,
        &:hover,
        &:focus {
          color: variables.$flyout-menu-link;

          &::before,
          span {
            color: inherit !important; // stylelint-disable-line declaration-no-important
          }
        }

        &.selected {
          background-color: variables.$flyout-menu-link-active-bg;
          color: variables.$flyout-menu-link-active;
        }
      }

      h3,
      h4 {
        height: auto;
        margin: 0;
        padding: variables.$padding-base-vertical variables.$padding-base-horizontal;
        border-top: 1px solid variables.$flyout-menu-header-border;
        border-bottom: 1px solid variables.$flyout-menu-header-border;
        background-color: variables.$flyout-menu-header-bg;
        color: variables.$flyout-menu-header-text;
        line-height: variables.$line-height-base;

        + p {
          margin-top: variables.$padding-large-vertical;
        }
      }

      h4 {
        padding: 0 variables.$padding-base-horizontal;
      }

      form {
        padding-left: 0;

        > ul {
          margin-left: 0;

          li:nth-child(n) {
            padding-left: variables.$padding-large-horizontal;
            line-height: inherit;

            label {
              a {
                display: block;
                padding: variables.$padding-base-vertical variables.$padding-base-horizontal;
              }
            }
          }

          + p {
            margin-top: variables.$padding-large-vertical;
          }
        }
      }

      #admin-menu {
        a {
          background-position: 8px center !important; // stylelint-disable-line declaration-no-important

          &.additionals {
            padding-left: 32px !important; // stylelint-disable-line declaration-no-important

            &::before {
              margin-right: variables.$padding-small-vertical;
            }
          }
        }
      }

      #watchers {
        .contextual {
          padding-top: variables.$line-height-computed * .5;
          padding-bottom: variables.$line-height-computed * .5;
        }

        .watchers {
          li {
            margin: (variables.$line-height-computed * .5) 0 0;
            padding: 0;

            img.gravatar {
              top: 0;
            }

            a {
              height: auto;
              border-top: 0;
              line-height: initial;
            }

            .delete {
              margin-right: variables.$padding-large-vertical;
              margin-left: auto;
              float: none;
              text-align: center;
              text-overflow: initial;
            }
          }
        }
      }
    }

    #query_form_content {
      fieldset {
        margin-bottom: variables.$line-height-computed;
      }
    }

    .search-magnifier {
      &--flyout {
        line-height: normal;
      }
    }

    .splitcontentleft {
      margin-bottom: variables.$line-height-computed;
      padding-right: 0;
      float: none;
    }

    .splitcontentright {
      padding-left: 0;
      float: none;
    }

    .attributes .splitcontentleft {
      margin-bottom: 0;
    }

    .tabular {
      input[type="checkbox"],
      input[type="radio"],
      input.date {
        width: auto;
        max-width: 95%;
      }

      label {
        float: none;
      }
    }

    .pagination {
      .pages {
        display: block;
      }
    }

    p.buttons,
    .other-formats > span,
    #wiki_add_attachment > p,
    #content > .contextual,
    #content > .contextual > span,
    #query_form > .contextual,
    #query_form_with_buttons > .contextual {
      margin-bottom: variables.$line-height-computed - variables.$padding-small-horizontal;
      padding: 0;
      float: none;
      text-align: left;

      a {
        padding: variables.$btn-padding-vertical variables.$btn-padding-horizontal-small;
        border: 1px solid variables.$pagination-border;
        border-radius: variables.$border-radius-base;
        background-color: variables.$pagination-bg;
        color: variables.$pagination-color;
        font-weight: variables.$font-weight-normal;

        &:hover,
        &:focus {
          border-color: variables.$pagination-hover-border;
          background-color: variables.$pagination-hover-bg;
          color: variables.$pagination-hover-color;
          text-decoration: none;
        }

        &.icon {
          padding-left: 20px + variables.$btn-padding-horizontal-small;
          background-position: variables.$btn-padding-horizontal-small 50%;
        }
      }

      a,
      input,
      select,
      label {
        margin-top: 0;
        margin-bottom: 5px;
      }

      label {
        display: inline-block;

        input[type="checkbox"],
        input[type="radio"] {
          margin-top: variables.$check-input-margin-btn-v;
        }
      }
    }

    #content > .contextual > span {
      margin-bottom: 0;
    }

    #content > .contextual > a,
    #content > .contextual .drdn,
    p.buttons a {
      display: inline-block;
      margin: 0 2px 5px 0;
      float: none;
    }

    #content > .contextual .drdn {
      padding: 0;
      border: 0;

      .drdn-trigger {
        padding: variables.$btn-padding-vertical variables.$btn-padding-horizontal;
      }

      .drdn-items {
        a {
          margin: 3px 0 0;
          padding-top: variables.$btn-padding-vertical;
          padding-bottom: variables.$btn-padding-vertical;

          &:first-child {
            margin-top: 0;
          }
        }
      }
    }

    #my-page {
      #list-left {
        width: 100%;
        padding-right: 0;
        float: none;
      }

      #list-right {
        width: 100%;
        padding-left: 0;
        float: none;
      }
    }

    div#issue-changesets {
      div.changeset {
        padding: 0;
      }
    }

    #admin-index > #admin-menu li {
      padding: 0;

      a {
        background-position: 8px center !important; // stylelint-disable-line declaration-no-important
      }
    }
  }

  // Tweaks for smartphones, touchscreens
  @media (hover: none) and (pointer: coarse) {
    .mobile-toggle-button::after {
      margin-top: 0;
    }

    .query-columns {
      span {
        display: block;
        margin-bottom: variables.$line-height-computed * .5;
      }

      .buttons {
        input[type="button"] {
          display: inline-block;
        }
      }
    }
  }
}

